[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/formation/terrain/buildings/RothComponents/RothWallBasic.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/formation/terrain/buildings/RothComponents/RothWallCloseGap.gd" type="Script" id=2]

[node name="RothWallCloseGap" type="Spatial"]
script = ExtResource( 2 )

[node name="WallA" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )
uv_shift = Vector3( -2, 0, 0 )

[node name="WallB" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
uv_shift = Vector3( 2, 0, 0 )

[node name="WallC" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
uv_shift = Vector3( 0, 1, 0 )
height = 1.0
